# otus-cpp-basics

./: CMakeLists.txt  README.md
homework_02/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello_world.cpp  main  move_me_out.h
hw02/: CMakeLists.txt  hw02.cbp  simple  simple.cpp
hw02/doxygen/: doxyfile
hw02/doxygen/html/: index.html  navtree.js
simple/: CMakeLists.txt
