cmake_minimum_required(VERSION 2.8)
project(cmake-example)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
find_package(Boost COMPONENTS chrono filesystem REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
set(SRC_LIST lib1/main.cpp lib2/main.cpp main.cpp)
add_executable(${PROJECT_NAME}${SRC_LIST})
target_link_libraries(${PROJECT_NAME}${Boost_LIBRARIES})
